Adicionei um arquivo de texto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section>
             <article>
-                <h2>Imprima o talento do seu negócio em sua Marca e não terá somente Clientes e sim fãs </h2>
+                <h2>Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs </h2>
                 <aside>
                     <p>Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
                 </aside>
