estrutura da página home

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Consultoria de branding</h1>
     </header>
     <main>
-        <section>
+        <section class="sectionArticle">
             <article>
                 <h2>Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs </h2>
                 <aside>
@@ -27,8 +27,8 @@
             </article>
             <a href="#">Saiba mais</a>
         </section>
-        <section>
-            <img src="#" alt="">
+        <section class="sectionImg">
+            <div class="img"><img src="#" alt="IMAGEM AQUI"></div>
         </section>
     </main>
 </body>
