--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
                 </aside>
             </article>
-            <a href="#">Saiba mais</a>
+            <a href="#">Saiba Menos</a>
         </section>
         <section class="sectionImg">
             <div class="img"><img src="#" alt="IMAGEM AQUI"></div>
