Página principal quase pronta

--- a/index.html
+++ b/index.html
@@ -9,26 +9,24 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="#" alt="Logo Sabrine Dornelles">
-            <a href="#">HOME</a>
-            <a href="#">SOBRE</a>
-            <a href="#">CONTATO</a>
+        <nav class="container-1">
+            <img id="logo" src="#" alt="LOGO">
+            <a class="link" href="#">HOME</a>
+            <a class="link" href="#">SOBRE</a>
+            <a class="link" href="#">CONTATO</a>
         </nav>
-        <h1>Consultoria de branding</h1>
     </header>
-    <main>
-        <section class="sectionArticle">
-            <article>
-                <h2>Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs </h2>
-                <aside>
-                    <p>Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
-                </aside>
+    <main class="container-2">
+        <section class="bloco-1">
+            <article class="artigo">
+                <h1 class="titulo">Consultoria de branding</h1>
+                <h2 class="subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs </h2>
+                <p class="conteudo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
+                <a class="botao" href="#">Saiba Mais</a>
             </article>
-            <a href="#">Saiba Menos</a>
         </section>
-        <section class="sectionImg">
-            <div class="img"><img src="#" alt="IMAGEM AQUI"></div>
+        <section class="bloco-2">
+            <img id="imagem-home" src="./home/assets/img/mechendo_no_tablet_qadrado.png" alt="">
         </section>
     </main>
 </body>
