Adicionei o Logo do site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="container-1">
-            <img id="logo" src="#" alt="LOGO">
+            <div id="logo"><img width="200px" src="./home/assets/img/logo_empresa.png" alt="LOGO"></div>
             <a class="link" href="#">HOME</a>
             <a class="link" href="#">SOBRE</a>
             <a class="link" href="#">CONTATO</a>
