--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="bloco-1">
             <article class="artigo">
                 <h1 class="titulo">Consultoria de branding</h1>
-                <h2 class="subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs </h2>
+                <h2 class="subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
                 <p class="conteudo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
                 <a class="botao" href="#">Saiba Mais</a>
             </article>
