Linkei os sites

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="container-1">
             <img width="200px" src="./home/assets/img/logo_empresa.png" alt="LOGO">
             <a class="link" href="#">HOME</a>
-            <a class="link" href="#">SOBRE</a>
+            <a class="link" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
             <a class="link" href="#">CONTATO</a>
         </nav>
     </header>
