Fiz parcialmente a page sobre

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -15,13 +15,21 @@
             <a class="link" href="#">SOBRE</a>
             <a class="link" href="#">CONTATO</a>
         </nav>
+        <div>
+            <h1 class="titulo">Sobre</h1>
+        </div>
     </header>
+
     <main class="container-2">
         <section class="bloco-1">
-            
+            <p class="conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?</p>
         </section>
         <section class="bloco-2">
-           
+
+        </section>
+        <section class="bloco-3">
+            <p class="conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?
+            </p>
         </section>
     </main>
 </body>
