--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="titulo">Consultoria de branding</h1>
                 <h2 class="subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
                 <p class="conteudo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
-                <a class="botao" href="#">Saiba Mais</a>
+                <a class="botao" href="./produtos/index.html">Saiba Mais</a>
             </article>
         </section>
         <section class="bloco-2">
