Atualizei o flexbox das paginas home e sobre

--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
     <link rel="stylesheet" href="./home/assets/style/home.css">
 </head>
 <body>
-    <header>
-        <nav class="container-1">
-            <img width="200px" src="./home/assets/img/logo_empresa.png" alt="LOGO">
-            <a class="link" href="#">HOME</a>
-            <a class="link" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="link" href="#">CONTATO</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./home/assets/img/logo_empresa.png" alt="LOGO">
+        <nav class="cabecalho-navegacao">
+            <a class="cabecalho-item" href="#">HOME</a>
+            <a class="cabecalho-item" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="#">CONTATO</a>
         </nav>
     </header>
-    <main class="container-2">
-        <section class="bloco-1">
-            <article class="artigo">
-                <h1 class="titulo">Consultoria de branding</h1>
-                <h2 class="subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
-                <p class="conteudo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
-                <a class="botao" href="#">Saiba Mais</a>
-            </article>
-        </section>
-        <section class="bloco-2">
-            <img id="imagem-home" src="./home/assets/img/mechendo_no_tablet_qadrado.png" alt="">
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-titulo">Consultoria de branding</h1>
+                <h2 class="conteudo-principal-subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
+                <p class="conteudo-principal-paragrafo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
+                <button class="conteudo-principal-botao">Saiba Mais</button>
+            </div>
+            <img class="conteudo-principal-imagem" src="./home/assets/img/mechendo_no_tablet_qadrado.png" alt="">
         </section>
     </main>
 </body>
