--- a/sobre/index.html
+++ b/sobre/index.html
@@ -8,28 +8,25 @@
     <link rel="stylesheet" href="./assets/style/sobre.css">
 </head>
 <body>
-    <header>
-        <nav class="container-1">
-            <img width="200px" src="./assets/img/logo_empresa.png" alt="LOGO">
-            <a class="link" href="../index.html" target="_self" hreflang="pt-br" rel="prev">HOME</a>
-            <a class="link" href="#">SOBRE</a>
-            <a class="link" href="#">CONTATO</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./assets/img/logo_empresa.png" alt="LOGO">
+        <nav class="cabecalho-navegacao">
+            <a class="cabecalho-item" href="../index.html" target="_self" hreflang="pt-br" rel="prev">HOME</a>
+            <a class="cabecalho-item" href="#">SOBRE</a>
+            <a class="cabecalho-item" href="#">CONTATO</a>
         </nav>
-        <div>
-            <h1 class="titulo">Sobre</h1>
-        </div>
     </header>
-
-    <main class="container-2">
-        <section class="bloco-1">
-            <p class="conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?</p>
-        </section>
-        <section class="bloco-2">
-
-        </section>
-        <section class="bloco-3">
-            <p class="conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?
-            </p>
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-escrito-titulo">Sobre</h1>
+                <h2 class="conteudo-principal-escrito-subtitulo">Gutierrez Oliveira</h2>
+                <p class="conteudo-principal-escrito-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?</p>
+            </div>
+            <div class="conteudo-principal-escrito">
+                <h2 class="conteudo-principal-escrito-subtitulo">Caroline Santos</h2>
+                <p class="conteudo-principal-escrito-paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laboriosam aliquid possimus illum quo in autem minus maxime sint culpa iure, id excepturi ipsam quisquam sapiente voluptatum. Praesentium, sequi. Soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dignissimos, possimus, quisquam est odio, dolorum corrupti nihil optio quia asperiores vel maiores error distinctio. Fugiat soluta perferendis impedit accusantium ad?</p>
+            </div>
         </section>
     </main>
 </body>
