criada pagina de contato

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="cabecalho-navegacao">
             <a class="cabecalho-item" href="#">HOME</a>
             <a class="cabecalho-item" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="#">CONTATO</a>
+            <a class="cabecalho-item" href="./contato/index.html">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
