ajuste na estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dornelles</title>
-    <link rel="stylesheet" href="./home/assets/style/home.css">
+    <link rel="stylesheet" href="./paginas/home/assets/style/home.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="./home/assets/img/logo_empresa.png" alt="LOGO">
+        <img class="cabecalho-imagem" src="./paginas/home/assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
             <a class="cabecalho-item" href="#">HOME</a>
-            <a class="cabecalho-item" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="./contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
+            <a class="cabecalho-item" href="./paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="./paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
@@ -23,13 +23,10 @@
                 <h2 class="conteudo-principal-subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
                 <p class="conteudo-principal-paragrafo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
 
-                <button href="#" class="conteudo-principal-botao">Saiba Mais</button>
+                <button class="conteudo-principal-botao"><a href="./paginas/produtos/index.html"  class="conteudo-principal-texto-botao">Saiba Mais</a>   </button>
             </div>
-            <img class="conteudo-principal-imagem" src="./home/assets/img/mechendo_no_tablet_qadrado.png" alt="">
-
-                <button class="conteudo-principal-botao" src="./produtos/index.html">Saiba Mais</button>
             </div>
-            <img class="conteudo-principal-imagem" src="./home/assets/img/mechendo_no_tablet_qadrado.png" alt="">
+            <img class="conteudo-principal-imagem" src="./paginas/home/assets/img/mexendo_no_tablet_quadrado.png" alt="">
         </section>
     </main>
 </body>
