--- a/paginas/produtos/index.html
+++ b/paginas/produtos/index.html
@@ -10,12 +10,12 @@
 </head>
 </head>
 <body>
-    <header>
-        <nav class="container-1">
-            <img width="200px" src="./assets/img/logo_empresa.png" alt="LOGO">
-            <a class="link" href="#">HOME</a>
-            <a class="link" href="#">SOBRE</a>
-            <a class="link" href="#">CONTATO</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="../home/assets/img/logo_empresa.png" alt="LOGO">
+        <nav class="cabecalho-navegacao">
+            <a class="cabecalho-item" href="#">HOME</a>
+            <a class="cabecalho-item" href="./paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="./paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
         </nav>
     </header>
 
