Arrumei o botão e exclui uma div sem fechamento

--- a/paginas/contato/index.html
+++ b/paginas/contato/index.html
@@ -11,14 +11,13 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
-            <a class="cabecalho-item" href="#">HOME</a>
-            <a class="cabecalho-item" href="./sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="./contato/index.html">CONTATO</a>
+            <a class="cabecalho-item" href="/index.html">HOME</a>
+            <a class="cabecalho-item" href="/paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="/paginas/contato/index.html" target="_self" hreflang="pt-br">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
         <section class="conteudo-principal">
-            <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-titulo">Contato</h1>
                 <p class="conteudo-principal-endereco">Rua Luis Correia de Melo,92 - Sala 402 B   São Paulo Contato@sabrinedornelles.com.br |  Tel: 11 994724188</p>
         </section>
