--- a/paginas/produtos/index.html
+++ b/paginas/produtos/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="../home/assets/img/logo_empresa.png" alt="LOGO">
+        <img class="cabecalho-imagem" src="/paginas/home/assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
-            <a class="cabecalho-item" href="#">HOME</a>
-            <a class="cabecalho-item" href="./paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="./paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
+            <a class="cabecalho-item" href="/index.html" target="_self" hreflang="pt-br" rel="prev">HOME</a>
+            <a class="cabecalho-item" href="/paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="prev">SOBRE</a>
+            <a class="cabecalho-item" href="/paginas/contato/index.html" target="_self" hreflang="pt-br" rel="prev">CONTATO</a>
         </nav>
     </header>
 
@@ -29,14 +29,14 @@
 
         <section class="container-3">
             <div class="card">
-                <img id="imagem-produto" src="../home/assets/img/imagem_produtividade01.png">
+                <img id="imagem-produto" src="/paginas/home/assets/img/imagem_produtividade01.png">
                 <h4 class="titulo">IBRANDING</h4>
                 <p class="conteudo">Imagina você ser reconhecido pelo seu talento? Onde sua voz é escutada, fazendo a diferença no mercado e construir relações significativas com as pessoas? Esse é o foco do Ibranding.</p>
                 <p class="conteudo">Usamos todos os conceitos de marketing e de branding (construção de marcas) para desenvolver sua marca pessoal.</p>      
             </div>
 
             <div class="card">
-                <img id="imagem-produto" src="../home/assets/img/imagem_produtividade03.png">
+                <img id="imagem-produto" src="/paginas/home/assets/img/imagem_produtividade03.png">
                 <h4 class="titulo">TEAM BRANDING
                 </h4>
                 <p class="conteudo">Sabemos que ser um influenciador na equipe, onde todos aos nosso redor nos escute, não é uma tarefa fácil e muitas vezes somos ignorados.</p>
@@ -45,14 +45,14 @@
             </div>
 
             <div class="card">
-                <img id="imagem-produto" src="../home/assets/img/imagem_produtividade04.png">
+                <img id="imagem-produto" src="/paginas/home/assets/img/imagem_produtividade04.png">
                 <h4 class="titulo">BRANDING ESTRATÉGICO</h4>
                 <p class="conteudo">Crie experiências memoráveis com seus seus clientes, fazendo que eles se tornem fãs da sua marca, produtos e serviços. </p>
                 <p class="conteudo">Iremos te ensinar com pontos estratégicos como se posicionar e agregar valores para o seu negócio. </p>
             </div>
 
             <div class="card"> 
-                <img id="imagem-produto" src="../home/assets/img/imagem_produtividade02.png">
+                <img id="imagem-produto" src="/paginas/home/assets/img/imagem_produtividade02.png">
                 <h4 class="titulo">IBRANDING CARREIRA</h4>
                 <p class="conteudo">Podemos te ajudar a construir sua marca profissional, focando no seu potencial e talentos. Priorizando o crescimento e reconhecimento na sua empresa com o marketing de carreira.</p>
                 <p class="conteudo"><strong>INDICADO:</strong> Para Executivos e futuros Executivos. </p>
