--- a/paginas/sobre/index.html
+++ b/paginas/sobre/index.html
@@ -11,9 +11,9 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
-            <a class="cabecalho-item" href="../index.html" target="_self" hreflang="pt-br" rel="prev">HOME</a>
-            <a class="cabecalho-item" href="#">SOBRE</a>
-            <a class="cabecalho-item" href="../contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
+            <a class="cabecalho-item" href="/index.html" target="_self" hreflang="pt-br" rel="prev">HOME</a>
+            <a class="cabecalho-item" href="./index.html" target="_self" hreflang="pt-br">SOBRE</a>
+            <a class="cabecalho-item" href="/paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
