--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./paginas/home/assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
-            <a class="cabecalho-item" href="#">HOME</a>
-            <a class="cabecalho-item" href="./paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="./paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
+            <a class="cabecalho-item" href="/index.html" target="_self" hreflang="pt-br">HOME</a>
+            <a class="cabecalho-item" href="/paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="/paginas/contato/index.html" target="_self" hreflang="pt-br" rel="next">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
@@ -23,7 +23,7 @@
                 <h2 class="conteudo-principal-subtitulo">Imprima o talento do seu negócio em sua marca e não terá somente clientes e sim fãs.</h2>
                 <p class="conteudo-principal-paragrafo">Aqui você encontra todos os produtos que foram desenvolvidos para ajudar você a criar, construir e expandir sua marca pessoal, profissional e também a marca da sua empresa ou do seu negócio.</p>
 
-                <button class="conteudo-principal-botao"><a href="./paginas/produtos/index.html"  class="conteudo-principal-texto-botao">Saiba Mais</a>   </button>
+                <button class="conteudo-principal-botao"><a href="./paginas/produtos/index.html"  class="conteudo-principal-texto-botao">Saiba Mais</a></button>
             </div>
             </div>
             <img class="conteudo-principal-imagem" src="./paginas/home/assets/img/mexendo_no_tablet_quadrado.png" alt="">
