Atualizei os diretórios

--- a/paginas/contato/index.html
+++ b/paginas/contato/index.html
@@ -11,9 +11,9 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="./assets/img/logo_empresa.png" alt="LOGO">
         <nav class="cabecalho-navegacao">
-            <a class="cabecalho-item" href="/index.html">HOME</a>
-            <a class="cabecalho-item" href="/paginas/sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
-            <a class="cabecalho-item" href="/paginas/contato/index.html" target="_self" hreflang="pt-br">CONTATO</a>
+            <a class="cabecalho-item" href="../../index.html">HOME</a>
+            <a class="cabecalho-item" href="../sobre/index.html" target="_self" hreflang="pt-br" rel="next">SOBRE</a>
+            <a class="cabecalho-item" href="../contato/index.html" target="_self" hreflang="pt-br">CONTATO</a>
         </nav>
     </header>
     <main class="conteudo">
